# PremVerse

./: CMakeLists.txt  README.md  class_user.cpp  hobbies.txt
data/gifts/interests/: books.txt  fashion.txt  gadgets.txt  outdoors.txt
data/gifts/occasions/: anniversary.txt  birthday.txt  valentines.txt
include/: Compatibility
include/Compatibility/: CompatibilityCalculator.h
include/User/: user.h
include/compatibility/: CompatibilityCalculator.h
include/gifts/: GiftManager.h  GiftPreferences.h
src/: CMakeLists.txt  class_user.cpp
src/compatibility/: CMakeLists.txt  CompatibilityCalculator.cpp  Intimacy.txt  emotional.txt  intellectual.txt  lifegoals.txt  lifestyle.txt  physical.txt  social.txt  spiritual.txt
src/events/: CMakeLists.txt
src/gifts/: CMakeLists.txt  GiftCategories.cpp  GiftCategories.h  GiftPreferences.cpp  GiftSuggester.h
src/storage/: CMakeLists.txt
src/utils/: CMakeLists.txt
